<resources>
    <string name="app_name">StoryProject</string>
    <string name="name_edit_text">Enter Name</string>
    <string name="age_edit_text">Enter Age</string>
    <string name="city_edit_text">Enter City</string>
    <string name="college_edit_text">Enter College Name</string>
    <string name="profession_edit_text">Enter Profession</string>
    <string name="animal_edit_text">Enter Animal Type</string>
    <string name="pet_name_edit_text">Enter Pet Name</string>
    <string name="story_text_view">Story will showing here...</string>
    <string name="display_button">Display Story</string>
</resources>